# chipster-job-manager

./: README.rst  index.html  params.json  requirements.txt  setup.cfg  setup.py  tox.ini
etc/: config.yaml.example
img/: task_states.dot
jobmanager/: manager.py  models.py  queue.py  run_flask.py  utils.py
jobmanager/tests/: test_jobs_db.py  test_utils.py
jobmanager/www/: __init__.py  httpserver.py
jobmanager/www/static/: index.html
jobmanager/www/static/js/: webadmin.js
jobmanager/www/static/views/: dashboard.html  jobs.html  maintenance.html
stylesheets/: styles.css
