[metadata]
name = Chipster Job Manager
author = Harri Hämäläinen
author-email = harri.hamalainen@csc.fi
summary = Manages long running jobs on Chipster platform
license = MIT
description-file =
    README.rst
requires-python = >=2.7
classifier =
    Development Status :: 1 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    jobmanager
