[metadata]
name = chipster-job-manager
author = Harri Hämäläinen
author-email = hhamalai@iki.fi
summary = Manages long running jobs on Chipster platform
license = MIT
version = "0.2a"
description-file =
    README.rst
classifier =
    Development Status :: 3 - Alpha
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python

[files]
packages =
    jobmanager
