[metadata]
name = chipster-job-manager
author = Harri Hämäläinen
author-email = hhamalai@iki.fi
summary = Manages long running jobs on Chipster platform
license = MIT
requires-python = >=2.6
description-file =
    README.rst
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Operating System :: OS Independent
    Programming Language :: Python
version=0.3.2
[files]
packages =
    jobmanager
